Added custom Users response type
